// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle className 1`] = `
<Toggle
  className="c"
>
  <button
    className="toggle c"
    onClick={[Function]}
    onMouseOver={[Function]}
    type="button"
    value={0}
  >
    <span
      className="toggle__bar  "
    />
    <span
      className="toggle__knob  "
    />
  </button>
</Toggle>
`;

exports[`Toggle disabled 1`] = `
<Toggle
  disabled={true}
  onToggle={[Function]}
>
  <button
    className="toggle "
    onClick={[Function]}
    onMouseOver={[Function]}
    type="button"
    value={0}
  >
    <span
      className="toggle__bar  toggle__bar--disabled"
    />
    <span
      className="toggle__knob  toggle__knob--disabled"
    />
  </button>
</Toggle>
`;

exports[`Toggle value is false 1`] = `
<Toggle
  value={false}
>
  <button
    className="toggle "
    onClick={[Function]}
    onMouseOver={[Function]}
    type="button"
    value={0}
  >
    <span
      className="toggle__bar  "
    />
    <span
      className="toggle__knob  "
    />
  </button>
</Toggle>
`;

exports[`Toggle value is true 1`] = `
<Toggle
  value={true}
>
  <button
    className="toggle "
    onClick={[Function]}
    onMouseOver={[Function]}
    type="button"
    value={1}
  >
    <span
      className="toggle__bar toggle__bar--active "
    />
    <span
      className="toggle__knob toggle__knob--active "
    />
  </button>
</Toggle>
`;
